@@ -132,30 +132,31 @@
 #define SWITCH_SPEAK 129
 #define SWITCH_SPOOF 130
 #define SWITCH_STATS 131
-#define SWITCH_SUMMARY 132
-#define SWITCH_TABLES 133
-#define SWITCH_TAG 134
-#define SWITCH_TELEPORT 135
-#define SWITCH_TF 136
-#define SWITCH_THINGS 137
-#define SWITCH_TITLE 138
-#define SWITCH_TRACE 139
-#define SWITCH_TYPE 140
-#define SWITCH_UNCLEAR 141
-#define SWITCH_UNFOLDER 142
-#define SWITCH_UNGAG 143
-#define SWITCH_UNHIDE 144
-#define SWITCH_UNMUTE 145
-#define SWITCH_UNREAD 146
-#define SWITCH_UNTAG 147
-#define SWITCH_UNTIL 148
-#define SWITCH_URGENT 149
-#define SWITCH_USEFLAG 150
-#define SWITCH_WHAT 151
-#define SWITCH_WHO 152
-#define SWITCH_WIPE 153
-#define SWITCH_WIZ 154
-#define SWITCH_WIZARD 155
-#define SWITCH_YES 156
-#define SWITCH_ZONE 157
+#define SWITCH_STATUS 132
+#define SWITCH_SUMMARY 133
+#define SWITCH_TABLES 134
+#define SWITCH_TAG 135
+#define SWITCH_TELEPORT 136
+#define SWITCH_TF 137
+#define SWITCH_THINGS 138
+#define SWITCH_TITLE 139
+#define SWITCH_TRACE 140
+#define SWITCH_TYPE 141
+#define SWITCH_UNCLEAR 142
+#define SWITCH_UNFOLDER 143
+#define SWITCH_UNGAG 144
+#define SWITCH_UNHIDE 145
+#define SWITCH_UNMUTE 146
+#define SWITCH_UNREAD 147
+#define SWITCH_UNTAG 148
+#define SWITCH_UNTIL 149
+#define SWITCH_URGENT 150
+#define SWITCH_USEFLAG 151
+#define SWITCH_WHAT 152
+#define SWITCH_WHO 153
+#define SWITCH_WIPE 154
+#define SWITCH_WIZ 155
+#define SWITCH_WIZARD 156
+#define SWITCH_YES 157
+#define SWITCH_ZONE 158
 #endif                          /* SWITCHES_H */
