@@ -129,6 +129,7 @@ SKIPDEFAULTS
 SPEAK
 SPOOF
 STATS
+STATUS
 SUMMARY
 TABLES
 TAG
