@@ -131,6 +131,7 @@ SWITCH_VALUE switch_list[] = {
   {"SPEAK", SWITCH_SPEAK},
   {"SPOOF", SWITCH_SPOOF},
   {"STATS", SWITCH_STATS},
+  {"STATUS", SWITCH_STATUS},
   {"SUMMARY", SWITCH_SUMMARY},
   {"TABLES", SWITCH_TABLES},
   {"TAG", SWITCH_TAG},
